# devflow

./: .gitignore  .vscodeignore  README.md  esbuild.mjs  package.json
mcp-server/: .dockerignore  Dockerfile  LICENSE  PUBLISH.md  README.md  __init__.py  package.json  pyproject.toml  requirements.txt  server.py  server_http.py  smithery.yaml  task_manager.py
mcp-server/.github/workflows/: publish.yml
src/: extension.ts  taskManager.ts  taskTreeProvider.ts
src/webview/: panel.ts  sidebarProvider.ts
