[tool.poetry]
name = "devflow-mcp"
version = "0.1.0"
description = "DevFlow MCP Server — AI-driven task management"
authors = ["devflow"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.26.0"

[tool.poetry.scripts]
devflow-mcp = "server:mcp.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
